--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:url" content="https://massterpc.github.io/" />
 <meta property="og:title" content="Частный мастер по ремонту техники Apple и ПК | Выезд на дом" />
 <meta property="og:description" content="Частный мастер по ремонту техники Apple и ПК с выездом на дом. Быстрая диагностика, починка на месте или в мастерской, оригинальные запчасти и гарантия на работы. Обслуживание: iPhone, iPad, MacBook, Mac, ПК, ноутбуки и периферия." />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://massterpc.github.io/meta.png" />
 
 <!-- X (Twitter) -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:url" content="https://massterpc.github.io/" />
 <meta property="twitter:title" content="Частный мастер по ремонту техники Apple и ПК | Выезд на дом" />
 <meta property="twitter:description" content="Частный мастер по ремонту техники Apple и ПК с выездом на дом. Быстрая диагностика, починка на месте или в мастерской, оригинальные запчасти и гарантия на работы. Обслуживание: iPhone, iPad, MacBook, Mac, ПК, ноутбуки и периферия." />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://massterpc.github.io/meta.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 
